package com.bankapp.userservice.service;

public interface KeyService {
}
